# duvua

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.prod.yml  compose.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: docker.yml  go.yml  release.yml  rust.yml
api/proto/davinci/: davinci.proto
api/proto/player/: player.proto
assets/: kiss-gifs.txt  slap-gifs.txt
cmd/bot/: clean.go  config.go  db.go  grpc.go  image.go  main.go
cmd/davinci/: config.go  main.go
cmd/duvua-bot/: main.go
cmd/player/: config.go  main.go
commands/: commands.go
commands/config/: welcome.go
commands/info/: anime.go  facts.go  ping.go
commands/music/: loop.go  musicadmin.go  pause.go  queue.go
commands/ticket/: ticketadmin.go
config/: config.go  const.go  util.go
docker/: bot.dockerfile  build.sh  davinci.dockerfile  migrator.dockerfile  player.dockerfile  rust-build.dockerfile  setup.sh
duvua-cache/: Cargo.toml
duvua-cache/src/: lib.rs  redis.rs
duvua-cache/src/utils/: mod.rs
duvua-framework/: Cargo.toml
duvua-framework/src/: env.rs  errors.rs  handler.rs  lib.rs  models.rs  utils.rs
duvua-framework/src/builder/: button_action_row.rs  interaction_response.rs  mod.rs
duvua-repository/: Cargo.toml
duvua-repository/src/: lib.rs  test_utils.rs  user.rs  welcome.rs  welcome_test.rs
events/: channel_delete.go  member_add.go  ready.go
internal/anime/: api.go  base_types.go  enum.go  models.go  models_test.go  test_data.json
internal/commands/: avatar.go  clear.go  clone.go  facts.go  help.go  ping.go  ship.go  welcome.go
internal/commands/config/: welcome.go
internal/commands/fun/: avatar.go  clone.go  ship.go
internal/commands/info/: anime.go  facts.go  help.go  ping.go
internal/commands/moderation/: clear.go
internal/commands/music/: loop.go  musicadmin.go  pause.go  play.go  queue.go  skip.go  stop.go  unpause.go  utils.go
internal/commands/ticket/: ticket.go  ticketadmin.go
internal/davinci/: image.go  server.go  welcome.go
internal/errors/: error.go
internal/events/: channel_delete.go  member_add.go  ready.go
internal/grpcutils/: all.go  auth.go  error.go  logger.go  recover.go  validate.go
internal/kv/: errors.go  memory.go  memory_background.go  memory_test.go  repository.go
internal/lang/: google.go  models.go  repository.go
internal/logger/: discordgo.go
internal/manager/: command.go  interaction.go  manager.go
internal/music/: errors.go  models.go  postgres.go  postgres_models.go  repository.go
internal/player/: errors.go  fetcher.go  fetcher_youtube.go  handler.go  manager.go  messenger.go  player.go  server.go  server_routes.go  utils.go
internal/player/encoder/: README.md  options.go  session.go  utils.go
internal/player/errcodes/: errors.go
internal/player/platform/: consts.go  fetcher.go  platform.go  spotify.go  youtube.go  youtube_types.go
internal/ticket/: errors.go  models.go  postgres_models.go  postgres_ticket.go  postgres_ticket_config.go  repository.go
internal/utils/: discordgo.go  lazy.go  lazy_config.go  stringint.go  time.go
internal/utils/grpcutils/: auth.go  error.go
internal/utils/logger/: discordgo.go  pgx.go
internal/welcome/: errors.go  image.go  models.go  postgres.go  postgres_models.go  repository.go
libs/cache/: Cargo.toml
libs/cache/src/utils/: mod.rs
libs/framework/: Cargo.toml
libs/framework/src/: errors.rs  handler.rs  lib.rs  utils.rs
libs/framework/src/builder/: button_action_row.rs  interaction_response.rs  mod.rs
libs/repository/: Cargo.toml
libs/repository/src/: guild.rs  guild_test.rs  lib.rs  test_utils.rs  welcome.rs  welcome_test.rs
migrations/: 00001_add_users.down.sql  00001_add_users.up.sql  00002_add_guilds.down.sql  00002_add_guilds.up.sql  00003_add_members.down.sql  00003_add_members.up.sql
pkg/grpcpool/: pool.go
pkg/pb/davinci/: davinci.pb.go  davinci_grpc.pb.go
pkg/pb/player/: errors.go  player.pb.go  player_grpc.pb.go
pkg/player/: client.go  errors.go  track.go
services/cerberus/: Cargo.toml  Dockerfile
services/cerberus/src/handlers/: serenity_handler.rs  welcome_shared.rs  welcomeadmin.rs
services/chimera/: Cargo.toml  Dockerfile
services/chimera/src/: main.rs
services/chimera/src/commands/: avatar.rs  clear.rs  clone.rs  facts.rs  kiss.rs  mod.rs  ping.rs
services/chimera/src/handlers/: component_handler.rs  kiss.rs  mod.rs
services/chimera/src/repository/: kiss_cache_data.rs  kiss_shared.rs  mod.rs  random.rs
services/commands/: Cargo.toml  Dockerfile
services/commands/src/: main.rs  messaging.rs
services/tickets/: Cargo.toml  Dockerfile
services/tickets/src/: main.rs
services/tickets/src/commands/: ticket.rs
services/tickets/src/handlers/: component_handler.rs  message_component_handler.rs  mod.rs  ticket.rs  ticket_shared.rs  ticketadmin.rs  ticketadmin_shared.rs
services/tickets/src/repository/: guild.rs  mod.rs  ticket.rs  ticket_shared.rs
services/welcome/: Cargo.toml  Dockerfile
services/welcome/src/: main.rs
services/welcome/src/handlers/: mod.rs  serenity_handler.rs  welcome_shared.rs  welcomeadmin.rs
sql/migrations/: 0001_add_welcome.down.sql  0001_add_welcome.up.sql  0001_update_modified_column.down.sql  0001_update_modified_column.up.sql  0002_add_welcome.down.sql  0002_add_welcome.up.sql  0003_add_ticket_config.down.sql  0003_add_ticket_config.up.sql  0004_add_ticket.down.sql  0004_add_ticket.up.sql  0005_add_music_config.down.sql  0005_add_music_config.up.sql
static/: embed.go
