[package]
name = "duvua-repository"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
async-trait = "0.1"
duvua-framework = { path = "../duvua-framework" }

[dependencies.sqlx]
version = "0.7"
features = ["postgres", "chrono", "runtime-tokio", "tls-rustls"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
