[package]
name = "duvua-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
async-trait = "0.1"
thiserror = "1.0"
serde_json = "1.0"

[dependencies.deadpool-redis]
version = "0.12"
features = ["rt_tokio_1"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
