[package]
name = "chimera"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
async-trait = "0.1"
duvua-framework = { path = "../../duvua-framework" }

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
