[package]
name = "chimera"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
async-trait = "0.1"
serde_json = "1.0"
nanoid = "0.4"
base64 = "0.21"
rand = "0.8"
duvua-framework = { path = "../../libs/framework" }
duvua-cache = { path = "../../libs/cache" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.deadpool-redis]
version = "0.12"
features = ["rt_tokio_1"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.tokio]
version = "1"
features = ["full"]
