[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
serde_json = "1.0"

[dependencies.redis]
version = "0.23.2"
features = ["tokio-rustls-comp"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["http", "model", "rustls_backend"]
