[package]
name = "tickets"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
async-trait = "0.1"
duvua-framework = { path = "../../libs/framework" }

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.deadpool-redis]
version = "0.12"
features = ["rt_tokio_1"]

[dependencies.mongodb]
version = "2.6"
features = ["bson-chrono-0_4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
